--- a/style.css
+++ b/style.css
@@ -8,7 +8,13 @@ h1 {
 h1 span {
   color: orange;
 }
-section {
+h3 span {
+  color: orange;
+}
+.heading {
+  font-size: 45px;
+}
+.flexible-section {
   display: flex;
 }
 .half-width {
@@ -34,4 +40,33 @@ section {
   background-image: url(./images/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
+}
+.experiences {
+  display: flex;
+}
+.box-exp {
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  box-shadow: 10px 5px 50px gray;
+  margin-bottom: 40px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  border-radius: 5px;
+}
+#full-stack {
+  border-left: 7px solid;
+  border-image: linear-gradient(orange, tomato);
+  border-image-slice: 1;
+}
+#baby-web {
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+
+.third-section {
+  background-image: url(./images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
 }
